--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,14 +3,14 @@ spring:
     name: codify-backend
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/codify
+    url: jdbc:postgresql://localhost:5433/codify
     username: codify_user
     password: dev123
     driver-class-name: org.postgresql.Driver
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create
     show-sql: true
     properties:
       hibernate:
@@ -27,6 +27,12 @@ spring:
             redirect-uri: http://localhost:8080/oauth2/callback/kakao
             authorization-grant-type: authorization_code
             scope: profile_nickname, profile_image, account_email
+        provider:  # 이 부분 추가!
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
 
 server:
   port: 8080
